--- a/neural_network.ipynb
+++ b/neural_network.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7e6235c0",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "afaf5309",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "9240e9b8",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "f535fa51",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "id": "e1370b7c",
    "metadata": {},
    "outputs": [],
@@ -108,17 +108,55 @@
     "        \n",
     "        z3=np.dot(z2,W3)+b3\n",
     "        a3=softmax(z3)\n",
-    "       # print(a3)\n",
+    "        #print(a3)\n",
     "        #print(a3.sum(axis=1))\n",
+    "        self.activations=(a1,a1,a3)\n",
+    "        return a3\n",
+    "        \n",
+    "    def backward_propagation(self,x,y,learning_rate=0.001):\n",
+    "        model=self.model\n",
+    "        W1,W2,W3=model['W1'],model['W2'],model['W3']\n",
+    "        b1,b2,b3=model['B1'],model['B2'],model['B3']\n",
+    "        (a1,a2,a3)=self.activations\n",
+    "        \n",
+    "        m=x.shape[0]\n",
+    "        \n",
+    "        delta3=a3-y\n",
+    "        dw3=np.dot(a2.T,delta3)\n",
+    "        db3=np.sum(delta3,axis=0)/m\n",
+    "        \n",
+    "        delta2=np.dot(delta3,W3.T)*a2*(1-a2)\n",
+    "        dw2=np.dot(a1.T,delta2)\n",
+    "        db2=np.sum(delta2,axis=0)/m\n",
     "        \n",
     "        \n",
+    "        delta1=np.dot(delta2,W2.T)*a1*(1-a1)\n",
+    "        dw1=np.dot(x.T,delta1)\n",
+    "        db1=np.sum(delta1,axis=0)/m\n",
     "        \n",
+    "        # update\n",
+    "        model[\"W3\"]-=learning_rate*dw3\n",
+    "        model[\"B3\"]-=learning_rate*db3\n",
+    "        \n",
+    "        model[\"W2\"]-=learning_rate*dw2\n",
+    "        model[\"B2\"]-=learning_rate*db2\n",
+    "        \n",
+    "        model[\"W1\"]-=learning_rate*dw1\n",
+    "        model[\"B1\"]-=learning_rate*db1\n",
+    "\n",
+    "\n",
+    "    def predict(x):\n",
+    "        y_=self.forward_propagation(x)\n",
+    "        return np.argmax(x,axis=1);\n",
+    "        \n",
+    "        \n",
+    "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "19c49139",
    "metadata": {},
    "outputs": [],
@@ -128,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "3d92f06f",
    "metadata": {},
    "outputs": [
@@ -153,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "a59b9956",
    "metadata": {},
    "outputs": [
@@ -161,10 +199,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[9.99999992e-01 8.06625703e-09]\n",
-      " [1.00000000e+00 2.30663921e-21]\n",
-      " [1.00000000e+00 6.59610077e-34]]\n",
-      "[1. 1. 1.]\n"
+      "[[9.99993921e-01 6.07890940e-06]\n",
+      " [1.00000000e+00 2.00806107e-11]\n",
+      " [1.00000000e+00 6.63323712e-17]]\n"
      ]
     }
    ],
@@ -175,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "id": "bb02cb6a",
    "metadata": {},
    "outputs": [
@@ -197,6 +234,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "83eeb9be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd142dcf",
    "metadata": {},
    "outputs": [],
    "source": []
